--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ wfdb-data/
 /WiredTiger*
 /wt.*
 
+wfdb-data/WiredTiger.turtle
+wfdb-data/WiredTiger.wt
+wfdb-data/diagnostic.data/metrics.interim
+wfdb-data/journal/WiredTigerLog.0000000006
