--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ wfdb-data/WiredTiger.turtle
 wfdb-data/WiredTiger.wt
 wfdb-data/diagnostic.data/metrics.interim
 wfdb-data/journal/WiredTigerLog.0000000006
+wfdb-data/diagnostic.data/metrics.interim
+wfdb-data/journal/WiredTigerLog.0000000006
+wfdb-data/WiredTiger.turtle
+wfdb-data/WiredTiger.wt
