--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,10 @@ wfdb-data/
 wfdb-data/WiredTiger.turtle
 wfdb-data/WiredTiger.wt
 wfdb-data/diagnostic.data/metrics.interim
-wfdb-data/journal/WiredTigerLog.0000000006
+wfdb-data/journal/WiredTigerLog.*
 wfdb-data/diagnostic.data/metrics.interim
-wfdb-data/journal/WiredTigerLog.0000000006
-wfdb-data/WiredTiger.turtle
+./wfdb-data/WiredTiger.turtle
 wfdb-data/WiredTiger.wt
+*.wt
+wfdb-data/diagnostic.data/metrics.2023-12-30T04-00-47Z-00000
+*.2023-12-30T04-00-47Z-00000
