--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -12,7 +12,7 @@ http {
 
         # Admin page
         location / {
-            proxy_pass http://web-admin:3000;
+            proxy_pass http://web-app-applicant:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
