--- a/workflow-service/package.json
+++ b/workflow-service/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.0.3"
   }
 }
