--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ jspm_packages/
 
 # MongoDB data directory
 wfdb-data/
+appldb-data/
 
 # WiredTiger files (if they're not in the above directory)
 /WiredTiger*
