--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     volumes:
       - ./applicant-service:/usr/src/app
     ports:
-      - "9001:9001" # note to self, move all services to 9000 range
+      - "9001:9000" # note to self, move all services to 9000 range
     depends_on:
       - kafka
       - workflow-service
@@ -73,6 +73,7 @@ services:
       - MONGODB_URI=mongodb://applicant-svc-db:27017/applicantdb
       - KAFKA_BROKER_URL=kafka:29092
       - WORKFLOW_SERVICE_URL=http://workflow-service:9000
+      - VISAAUTH_SERVICE_URL=http://visa-auth-service:9002
 
   web-app-applicant:
     build:
@@ -96,6 +97,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${WORKFLOW_DB_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${WORKFLOW_DB_PASSWORD}
 
+  # Auth microservices (needs container)
   user-db:
     image: mongo:latest
     ports:
@@ -106,12 +108,100 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${USER_DB_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${USER_DB_PASSWORD}
 
-  nginx-proxy:
+  # Connection API (simulate API gateway)
+  # nginx-proxy:
+  #   build:
+  #     context: ./nginx-proxy
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - web-app-applicant
+  #     - workflow-service
+
+  # Visa Auth service:
+
+  visa-auth-service:
     build:
-      context: ./nginx-proxy
-      dockerfile: Dockerfile
+      context: ./visa-auth-service
+    volumes:
+      - ./visa-auth-service:/usr/src/app
     ports:
-      - "8080:80"
+      - "9002:9000"
     depends_on:
-      - web-app-applicant
+      - kafka
+      - visa-auth-svc-db
+    environment:
+      - MONGODB_URI=mongodb://visa-auth-svc-db:27017/visaauthdb
+      - KAFKA_BROKER_URL=kafka:29092
+
+  visa-auth-svc-db:
+    image: mongo:latest
+    ports:
+      - "27002:27017"
+    volumes:
+      - ./visaauthdb-data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${AUTH_DB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${AUTH_DB_PASSWORD}
+
+  # Application / Applicant microservices
+  branch-svc-db:
+    image: mongo:latest
+    ports:
+      - "27003:27017"
+    volumes:
+      - ./branch-data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${BRANCH_DB_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${BRANCH_DB_PASSWORD}
+
+  branch-service:
+    build:
+      context: ./branch-service
+    volumes:
+      - ./branch-service:/usr/src/app
+    ports:
+      - "9003:9003" # note to self, move all services to 9000 range
+    depends_on:
+      - kafka
       - workflow-service
+    environment:
+      - MONGODB_URI=mongodb://branch-svc-db:27017/branchdb
+      - KAFKA_BROKER_URL=kafka:29092
+      - WORKFLOW_SERVICE_URL=http://workflow-service:9000
+
+  web-app-branch:
+    build:
+      context: ./web-app-branch
+      dockerfile: Dockerfile
+    volumes:
+      - ./web-app-branch:/usr/src/app
+    ports:
+      - "3005:3000"
+    depends_on:
+      - branch-service
+# Port list:
+
+# Internal services:
+# zookeeper: 2181
+# kafka: 9092
+# kafka-ui: 8050
+# nginx-proxy: 8080:80
+
+# API services:
+# workflow-service: 9000:9000
+# applicant-service: 9001:9000
+# visa-auth-service: 9002:9000
+# branch-service: 9003:9003
+
+# Web apps:
+# web-app-applicant: 3004:3000
+# web-app-branch: 3005:3000
+
+# Databases:
+# workflow-db: 27017:27017
+# user-db: 27018:27017
+# applicant-svc-db: 27001:27017
+# visa-auth-svc-db: 27002:27017
+# branch-svc-db: 27003:27017
