--- a/web-app-branch/Dockerfile
+++ b/web-app-branch/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:latest
+FROM node:20
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-
 RUN npm install
 
-COPY . ./
+COPY . .
 
-EXPOSE 9000
+CMD ["npm", "start"]
 
-CMD [ "npm", "start" ]
+EXPOSE 3005
