--- a/web-app-branch/package.json
+++ b/web-app-branch/package.json
@@ -47,11 +47,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "proxy": {
-    "/api": {
-      "target": "http://applicant-service:9000",
-      "secure": false,
-      "changeOrigin": true
-    }
-  }
+  "proxy": "http://nginx-proxy:8888"
 }
